--- a/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooter0.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutFooter/_LayoutFooter0.cshtml
@@ -3,15 +3,14 @@
 @* --------------------------------------------------- *@
 
 
-<div class="b-example-divider"></div>
-
+<div class="b-example-divider d-none">Layout Footer Main</div>
 
 <div class="container">
-    
+
     <footer class="container py-5 bottom-0 bg-body-tertiary">
-    
+
         <div class="row">
-        
+
             <div class="col-12 col-md">
 
                 <svg class="d-block mb-2" fill="none" height="24" role="img" stroke="currentColor"
@@ -175,7 +174,7 @@
 </div>
 
 
-<div class="b-example-divider"></div>
+<div class="b-example-divider d-none">Layout Footer Basic Original</div>
 
 
 <div class="container">
@@ -210,7 +209,7 @@
 </div>
 
 
-<div class="b-example-divider"></div>
+<div class="b-example-divider d-none">Layout Footer Simple Original</div>
 
 
 <div class="container">
@@ -251,7 +250,7 @@
 </div>
 
 
-<div class="b-example-divider"></div>
+<div class="b-example-divider d-none">Layout Footer Main Original</div>
 
 
 <div class="container">
@@ -277,7 +276,7 @@
     </footer>
 </div>
 
-<div class="b-example-divider"></div>
+<div class="b-example-divider d-none">Layout Footer complete Original</div>
 
 <div class="container">
     <footer class="row row-cols-1 row-cols-sm-2 row-cols-md-5 py-5 my-5 border-top">
@@ -360,7 +359,7 @@
 </div>
 
 
-<div class="b-example-divider"></div>
+<div class="b-example-divider d-none">Layout Footer complete with newsletter Original</div>
 
 
 <div class="container">
