--- a/SchoolProject.Web/Views/Shared/_LayoutDarkModeButton.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutDarkModeButton.cshtml
@@ -4,6 +4,7 @@
 @* *@
 @* ------------------------------------------------------------------------------------------------------------------ *@
 
+<div class="b-example-divider d-none">Bootstrap icons svg for button icons</div>
 <svg xmlns="http://www.w3.org/2000/svg" style="display: none;">
     <symbol id="check2" viewBox="0 0 16 16">
         <path d="M13.854 3.646a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708 0l-3.5-3.5a.5.5 0 1 1 .708-.708L6.5 10.293l6.646-6.647a.5.5 0 0 1 .708 0z"/>
@@ -20,6 +21,7 @@
     </symbol>
 </svg>
 
+<div class="b-example-divider d-none">Bootstrap color mode button with icons</div>
 <div class="dropdown position-fixed bottom-0 end-0 mb-3 me-3 bd-mode-toggle">
 
     <button aria-expanded="false" aria-label="Toggle theme (auto)"
@@ -76,10 +78,3 @@
 
     </ul>
 </div>
-
-
-@* ------------------------------------------------------------------------------------------------------------------ *@
-@* *@
-@* Secção do novo botão de modo escuro *@
-@* *@
-@* ------------------------------------------------------------------------------------------------------------------ *@
