--- a/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutFooter.cshtml
@@ -5,30 +5,29 @@
 @* --------------------------------------------------- *@
 
 
-<div class="b-example-divider">
-    @* <partial name="LayoutFooter/_LayoutFooter0"/> *@
-</div>
+<div class="b-example-divider d-none">Layout Footer Matrix</div>
+@* <partial name="LayoutFooter/_LayoutFooter0"/> *@
 
-<div class="b-example-divider">
-    @* <partial name="LayoutFooter/_LayoutFooterMain"/> *@
-</div>
 
-<div class="b-example-divider">
-    <partial name="LayoutFooter/_LayoutFooterMinimal"/>
-</div>
+<div class="b-example-divider d-none">Layout Footer Main</div>
+@* <partial name="LayoutFooter/_LayoutFooterMain"/> *@
 
-<div class="b-example-divider">
-    <partial name="LayoutFooter/_LayoutFooterSimple"/>
-</div>
 
-<div class="b-example-divider">
-    @* <partial name="LayoutFooter/_LayoutFooterComplete"/> *@
-</div>
+<div class="b-example-divider d-none">Layout Footer Minimal</div>
+<partial name="LayoutFooter/_LayoutFooterMinimal"/>
 
-<div class="b-example-divider">
-    @* <partial name="LayoutFooter/_LayoutFooterNewsletter"/> *@
-</div>
 
-<div class="b-example-divider">
-    <script src="~/js/siteFooter.js"></script>
-</div>
+<div class="b-example-divider d-none">Layout Footer simple</div>
+<partial name="LayoutFooter/_LayoutFooterSimple"/>
+
+
+<div class="b-example-divider d-none">Layout Footer Complete</div>
+@* <partial name="LayoutFooter/_LayoutFooterComplete"/> *@
+
+
+<div class="b-example-divider d-none">Layout Footer with Newsletter</div>
+@* <partial name="LayoutFooter/_LayoutFooterNewsletter"/> *@
+
+
+<div class="b-example-divider d-none">Layout Footer javascript</div>
+<script src="~/js/siteFooter.js"></script>
