--- a/SchoolProject.Web/Views/Shared/_LayoutHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutHeader.cshtml
@@ -1,19 +1,12 @@
 ﻿<header>
 
-    <div class="b-example-divider">
-        <partial name="_LayoutNavBar"/>
-    </div>
+    <div class="b-example-divider d-none">Layout Header Nav Bars</div>
+    <partial name="_LayoutNavBar"/>
 
-    <div class="b-example-divider">
-        <partial name="_LayoutOffCanvas"/>
-    </div>
+    <div class="b-example-divider d-none">Layout Header Off-canvas</div>
+    <partial name="_LayoutOffCanvas"/>
 
-    <div class="b-example-divider">
-        @* <partial name="_LayoutNavBar3"/> *@
-    </div>
-
-    <div class="b-example-divider">
-        @* <partial name="_LayoutNavBar4"/> *@
-    </div>
+    <div class="b-example-divider d-none">Layout Header Nav Bar for tests 3</div>
+    @* <partial name="_LayoutNavBar3"/> *@
 
 </header>
