--- a/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBar.cshtml
@@ -1,32 +1,26 @@
 ﻿@* --------------------------------------------------- *@
-@* Barras de navegação do número 0 até ao 5 *@
+@* Barras de navegação do número 0 até ao 5            *@
 @* --------------------------------------------------- *@
 
-@* --------------------------------------------------- *@
-@* Barras de navegação para testes *@
-@* --------------------------------------------------- *@
-
-<div class="b-example-divider">
-    @* <partial name="LayoutNavBar/_LayoutNavBar0"/> *@
-</div>
-
-<div class="b-example-divider">
-    @* <partial name="LayoutNavBar/_LayoutNavBarMedium"/> *@
-</div>
-
-<div class="b-example-divider">
-    @* <partial name="LayoutNavBar/_LayoutNavBarOffCanvasLarge"/> *@
-</div>
-
-<div class="b-example-divider">
-    @* <partial name="LayoutNavBar/_LayoutNavBarMain"/> *@
-</div>
-
-<div class="b-example-divider">
-    @* <partial name="LayoutNavBar/_LayoutNavBar4"/> *@
-</div>
+<div class="b-example-divider d-none">Layout Nav Bar Matrix</div>
+@* <partial name="LayoutNavBar/_LayoutNavBar0"/> *@
 
 
-<div class="b-example-divider">
-    <partial name="LayoutNavBar/_LayoutNavBar5Test"/>
-</div>
+<div class="b-example-divider d-none">Layout Nav Bar Medium Size</div>
+@* <partial name="LayoutNavBar/_LayoutNavBarMedium"/> *@
+
+
+<div class="b-example-divider d-none">Layout Nav Bar Large Size</div>
+@* <partial name="LayoutNavBar/_LayoutNavBarOffCanvasLarge"/> *@
+
+
+<div class="b-example-divider d-none">Layout Nav Bar Main from Project</div>
+<partial name="LayoutNavBar/_LayoutNavBarMain"/>
+
+
+<div class="b-example-divider d-none">Layout Nav Bar from Bootstrap site</div>
+@* <partial name="LayoutNavBar/_LayoutNavBarBootstrapSite"/> *@
+
+
+<div class="b-example-divider d-none">Layout Nav Bar with Double Header</div>
+<partial name="LayoutNavBar/_LayoutNavBarDoubleHeader"/>
