--- a/SchoolProject.Web/Views/Shared/_LayoutOffcanvas.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutOffcanvas.cshtml
@@ -5,32 +5,32 @@
 @* Barras de navegação para testes *@
 @* ----------------------------------------------------- *@
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas0"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 0</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas0"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas1"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 1</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas1"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas2"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 2</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas2"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas3"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 3</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas3"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas4"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 4</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas4"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas5"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 5</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas5"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas6"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 6</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas6"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffcanvas7"/>
+<div class="b-example-divider d-none">Layout Off-canvas for tests 7</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvas7"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffCanvasAdminMenu"/>
+<div class="b-example-divider d-none">Layout Off-canvas Admin Panel</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvasAdminMenu"/>
 
-<div class="b-example-divider"></div>
-<partial name="LayoutOffcanvas/_LayoutOffCanvasAccountMenu"/>
+<div class="b-example-divider d-none">Layout Off-canvas Account Panel</div>
+<partial name="LayoutOffCanvas/_LayoutOffCanvasAccountMenu"/>
