--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarMain.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarMain.cshtml
@@ -19,63 +19,62 @@
         </a>
 
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarHomePanel"/>
-        </div>
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarHomePanel"/>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarCountriesPanel"/>
-        </div>
 
-        <div class="b-example-divider">
-            <a class="nav-link @(currentController == "Courses" ? "active" : "")"
-               asp-area="" asp-controller="Courses" asp-action="Index">
-                <i class="fas fa-person-shelter"></i>Courses
-            </a>
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarCountriesPanel"/>
 
-            <a class="nav-link @(currentController == "Enrollments" ? "active" : "")"
-               asp-area="" asp-controller="Enrollments" asp-action="Index">
-                <i class="fas fa-person-through-window"></i>Enrollments
-            </a>
 
-            <a class="nav-link @(currentController == "Genders" ? "active" : "")"
-               asp-area="" asp-controller="Genders" asp-action="Index">
-                @* <i class="fas fa-person-shelter"></i> *@
-                <span class="material-symbols-outlined">transgender</span>Genders
-            </a>
-        </div>
+        <div class="b-example-divider d-none"></div>
+        <a class="nav-link @(currentController == "Courses" ? "active" : "")"
+           asp-area="" asp-controller="Courses" asp-action="Index">
+            <i class="fas fa-person-shelter"></i>Courses
+        </a>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarSchoolClassesPanel"/>
-        </div>
+        <a class="nav-link @(currentController == "Enrollments" ? "active" : "")"
+           asp-area="" asp-controller="Enrollments" asp-action="Index">
+            <i class="fas fa-person-through-window"></i>Enrollments
+        </a>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarStudentsPanel"/>
-        </div>
+        <a class="nav-link @(currentController == "Genders" ? "active" : "")"
+           asp-area="" asp-controller="Genders" asp-action="Index">
+            @* <i class="fas fa-person-shelter"></i> *@
+            <span class="material-symbols-outlined">transgender</span>Genders
+        </a>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarTeachersPanel"/>
-        </div>
 
-        <div class="b-example-divider">
-            @* <partial name="_LayoutNavBarLanguagePanel"/> *@
-        </div>
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarSchoolClassesPanel"/>
 
-        <div class="b-example-divider">
-            @* <partial name="_LayoutNavBarThemePanel"/> *@
-        </div>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarAccountPanel"/>
-        </div>
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarStudentsPanel"/>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarAdminPanel"/>
-        </div>
 
-        <div class="b-example-divider">
-            <partial name="_LayoutNavBarLoginPanel"/>
-        </div>
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarTeachersPanel"/>
+
+
+        <div class="b-example-divider d-none"></div>
+        @* <partial name="_LayoutNavBarLanguagePanel"/> *@
+
+
+        <div class="b-example-divider d-none"></div>
+        @* <partial name="_LayoutNavBarThemePanel"/> *@
+
+
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarAccountPanel"/>
+
+
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarAdminPanel"/>
+
+
+        <div class="b-example-divider d-none"></div>
+        <partial name="_LayoutNavBarLoginPanel"/>
 
     </div>
 
