--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarAccountPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarAccountPanel.cshtml
@@ -1,9 +1,7 @@
-﻿@using System.Diagnostics
-@using Microsoft.AspNetCore.Identity
-@using SchoolProject.Web.Data.Entities.Users
+﻿@using SchoolProject.Web.Data.Entities.Users
 @using SchoolProject.Web.Helpers.Users
-
-
+@using System.Diagnostics
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 @inject IUserHelper UserHelper
