--- a/SchoolProject.Web/Views/_ViewImports.cshtml
+++ b/SchoolProject.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using SchoolProject.Web
+@using SchoolProject.Web.Data.Entities
 @using SchoolProject.Web.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
