Storage helper updated, still has work to be done

--- a/SchoolProject.Web/Views/Shared/_LayoutHeadImports.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutHeadImports.cshtml
@@ -80,6 +80,9 @@
       rel="stylesheet"/>
 <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Sharp:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200"
       rel="stylesheet"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
+
 
 
 <div class="b-example-divider d-none">Custom styles</div>
