More html redone

--- a/SchoolProject.Web/Views/Shared/LayoutOffCanvas/_LayoutOffCanvasAccountMenu.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutOffCanvas/_LayoutOffCanvasAccountMenu.cshtml
@@ -28,7 +28,7 @@
      id="offCanvasAccountConfiguration" aria-labelledby="offcanvasAccountConfigurationLabel">
 
     <div class="offcanvas-header">
-        <h5 class="offcanvas-title" id="offcanvasAccountConfigurationHeaderLabel">Off-canvas Account Configuration</h5>
+        <h5 class="offcanvas-title" id="offcanvasAccountConfigurationHeaderLabel">Account Configuration | Off-canvas </h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
     </div>
 
