--- a/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
+++ b/SchoolProject.Web/Views/Shared/LayoutNavBar/_LayoutNavBarDoubleHeader.cshtml
@@ -53,31 +53,42 @@
 
 
 <div class="b-example-divider d-none">Layout Footer Double 1.ª</div>
-
 <div class="px-3 py-2 border-bottom">
+
+    @* <button type="button" class="btn btn-primary">Primary</button> *@
+    @* <button type="button" class="btn btn-secondary">Secondary</button> *@
+    @* <button type="button" class="btn btn-success">Success</button> *@
+    @* <button type="button" class="btn btn-danger">Danger</button> *@
+    @* <button type="button" class="btn btn-warning">Warning</button> *@
+    @* <button type="button" class="btn btn-info">Info</button> *@
+    @* <button type="button" class="btn btn-light">Light</button> *@
+    @* <button type="button" class="btn btn-dark">Dark</button> *@
+    @* <button type="button" class="btn btn-link">Link</button> *@
 
     <div class="container">
 
         <div class="d-flex flex-wrap align-items-center justify-content-center justify-content-lg-start">
+
             <a href="/"
                class="d-flex align-items-center my-2 my-lg-0 me-lg-auto text-decoration-none">
-                <svg class="bi me-2" width="40" height="32" role="img" aria-label="School Management">
-                    <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#bi-house-gear"/>
+                <svg aria-label="School Management" class="bi me-2" fill="currentColor"
+                     height="48" role="img" width="auto">
+                    <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#house-gear"/>
                 </svg>
             </a>
 
             <ul class="nav col-12 col-lg-auto my-2 justify-content-center my-md-0 text-small">
                 <li>
                     <a href="#" class="nav-link text-secondary">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
-                            <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#bi-house-door"/>
+                        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="24" width="24">
+                            <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#house-door"/>
                         </svg>
                         Home
                     </a>
                 </li>
                 <li>
                     <a href="#" class="nav-link ">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="24" width="24">
                             <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#speedometer2"/>
                         </svg>
                         Dashboard
@@ -85,7 +96,7 @@
                 </li>
                 <li>
                     <a href="#" class="nav-link ">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="24" width="24">
                             <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#table"/>
                         </svg>
                         Orders
@@ -93,7 +104,7 @@
                 </li>
                 <li>
                     <a href="#" class="nav-link ">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="24" width="24">
                             <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#grid"/>
                         </svg>
                         Products
@@ -101,7 +112,7 @@
                 </li>
                 <li>
                     <a href="#" class="nav-link ">
-                        <svg class="bi d-block mx-auto mb-1" width="24" height="24">
+                        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="24" width="24">
                             <use xlink:href="/lib/bootstrap-icons/bootstrap-icons.svg#person-circle"/>
 
                         </svg>
@@ -118,6 +129,15 @@
 <div class="b-example-divider d-none">Layout Footer Double 2.ª</div>
 <div class="px-3 py-2 border-bottom mb-3">
 
+    @* <button type="button" class="btn btn-outline-primary">Primary</button> *@
+    @* <button type="button" class="btn btn-outline-secondary">Secondary</button> *@
+    @* <button type="button" class="btn btn-outline-success">Success</button> *@
+    @* <button type="button" class="btn btn-outline-danger">Danger</button> *@
+    @* <button type="button" class="btn btn-outline-warning">Warning</button> *@
+    @* <button type="button" class="btn btn-outline-info">Info</button> *@
+    @* <button type="button" class="btn btn-outline-light">Light</button> *@
+    @* <button type="button" class="btn btn-outline-dark">Dark</button> *@
+
     <div class="container d-flex flex-wrap justify-content-center">
 
         <form class="col-12 col-lg-auto mb-2 mb-lg-0 me-lg-auto" role="search">
@@ -130,11 +150,14 @@
         @* </div> *@
 
         @* // altera os botões que iram aparecer consoante o estado do utilizador *@
+        <div class="b-example-divider d-none">Buttons for login and register user / change user and logout</div>
         <div class="text-end">
             @if (User.Identity.IsAuthenticated)
             {
                 <a class="btn btn-light text-dark me-2  @(currentAction == "ChangeUser" && currentController == "Account" ? "active" : "")"
                    asp-area="" asp-controller="Account" asp-action="ChangeUser">
+
+                    @* <span class="fa-solid fa-user-plus fa-2xl"></span> *@
                     <span class="material-symbols-outlined">settings_account_box</span>
                     @* @User.Identity?.Name *@
                     Hello @await UserHelper.GetUserInitialsAsync()
@@ -142,24 +165,35 @@
 
                 <a class="btn btn-primary  @(currentAction == "LogOut" && currentController == "Account" ? "active" : "")"
                    asp-area="" asp-controller="Account" asp-action="LogOut">
-                    <span class="material-symbols-outlined">logout</span>Logout
+
+                    @* <span class="fa-solid fa-sign-out fa-2xl"></span> *@
+                    <span class="material-symbols-outlined">logout</span>
+                    @* <span class="material-symbols-outlined">logout</span> *@
+                    Logout
                 </a>
             }
             else
             {
                 <a class="btn btn-light text-dark me-2  @(currentAction == "Login" && currentController == "Account" ? "active" : "")"
                    asp-area="" asp-controller="Account" asp-action="Login">
-                    <span class="material-symbols-outlined">login</span>Login
+
+                    @* <span class="fa-solid fa-right-to-bracket fa-2xl"></span> *@
+                    <span class="material-symbols-outlined">login</span>
+                    Login
                 </a>
 
                 <a class="btn btn-primary  @(currentAction == "Register" && currentController == "Account" ? "active" : "")"
                    asp-area="" asp-controller="Account" asp-action="Register">
-                    <span class="material-symbols-outlined">person_add</span>Register
+
+                    @* <span class="fa-solid fa-user-plus fa-2xl"></span> *@
+                    <span class="material-symbols-outlined">person_add</span>
+                    Register
                 </a>
             }
         </div>
 
         @* // mostra o painel offcanvas de configuração da conta *@
+        <div class="b-example-divider d-none">Buttons to open the off-canvas panel on the left (Account Panel)</div>
         @if (User.Identity.IsAuthenticated)
         {
             <div class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
@@ -175,7 +209,7 @@
                 @* </a> *@
 
                 <button
-                    aria-controls="offCanvasAccountConfiguration" class="btn btn-primary"
+                    aria-controls="offCanvasAccountConfiguration" class="btn btn-info"
                     data-bs-target="#offCanvasAccountConfiguration" data-bs-toggle="offcanvas" type="button">
                     <span class="material-symbols-outlined">settings_account_box</span>
                     Account Panel
@@ -187,6 +221,7 @@
 
         @* // mostra o painel offcanvas do painel do admin (funções exclusivas dos admins) *@
         @* @if (User.Identity.IsAuthenticated && (User.IsInRole("Admin") || User.IsInRole("SuperAdmin"))) *@
+        <div class="b-example-divider d-none">Buttons to open the off-canvas panel on the right (Admin Panel)</div>
         @if (User.Identity.IsAuthenticated && User.HasClaim("IsAdmin", "true"))
         {
             <div class="nav-item py-2 py-lg-1 col-12 col-lg-auto">
@@ -202,7 +237,7 @@
                 @* </a> *@
 
                 <button
-                    aria-controls="offCanvasAdminPanel" class="btn btn-primary"
+                    aria-controls="offCanvasAdminPanel" class="btn btn-info"
                     data-bs-target="#offCanvasAdminPanel" data-bs-toggle="offcanvas" type="button">
                     <span class="material-symbols-outlined">settings_account_box</span>
                     Admin Panel
