--- a/SchoolProject.Web/Views/Shared/_LayoutNavBarStudentsPanel.cshtml
+++ b/SchoolProject.Web/Views/Shared/_LayoutNavBarStudentsPanel.cshtml
@@ -8,17 +8,29 @@
 
 
 <div class="dropdown">
-    @* <span class="material-symbols-outlined">settings</span> *@
+
     <a class="nav-link dropdown-toggle @(currentController is "StudentCourses" or "Students" ? "active" : "")"
        role="button" data-bs-toggle="dropdown" aria-expanded="false">
-        <i class="material-symbols-outlined">admin_panel_settings</i>Students
+
+        <svg class="bi d-block mx-auto mb-1" fill="currentColor" height="2em" viewBox="0 0 640 512"
+             xmlns="http://www.w3.org/2000/svg">
+            <path d="M160 64c0-35.3 28.7-64 64-64H576c35.3 0 64 28.7 64 64V352c0 35.3-28.7 64-64 64H336.8c-11.8-25.5-29.9-47.5-52.4-64H384V320c0-17.7 14.3-32 32-32h64c17.7 0 32 14.3 32 32v32h64V64L224 64v49.1C205.2 102.2 183.3 96 160 96V64zm0 64a96 96 0 1 1 0 192 96 96 0 1 1 0-192zM133.3 352h53.3C260.3 352 320 411.7 320 485.3c0 14.7-11.9 26.7-26.7 26.7H26.7C11.9 512 0 500.1 0 485.3C0 411.7 59.7 352 133.3 352z"/>
+        </svg>
+        @* <span class="fa-solid fa-chalkboard-user fa-2xl"></span> *@
+
+        @* <svg xmlns="http://www.w3.org/2000/svg" height="2em" viewBox="0 0 640 512"> *@
+        @*     <path d="M96 0C43 0 0 43 0 96V416c0 53 43 96 96 96H544c53 0 96-43 96-96V96c0-53-43-96-96-96H96zM64 96c0-17.7 14.3-32 32-32H544c17.7 0 32 14.3 32 32V416c0 17.7-14.3 32-32 32H96c-17.7 0-32-14.3-32-32V96zm159.8 80a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM96 309.3c0 14.7 11.9 26.7 26.7 26.7h56.1c8-34.1 32.8-61.7 65.2-73.6c-7.5-4.1-16.2-6.4-25.3-6.4H149.3C119.9 256 96 279.9 96 309.3zM461.2 336h56.1c14.7 0 26.7-11.9 26.7-26.7c0-29.5-23.9-53.3-53.3-53.3H421.3c-9.2 0-17.8 2.3-25.3 6.4c32.4 11.9 57.2 39.5 65.2 73.6zM372 289c-3.9-.7-7.9-1-12-1H280c-4.1 0-8.1 .3-12 1c-26 4.4-47.3 22.7-55.9 47c-2.7 7.5-4.1 15.6-4.1 24c0 13.3 10.7 24 24 24H408c13.3 0 24-10.7 24-24c0-8.4-1.4-16.5-4.1-24c-8.6-24.3-29.9-42.6-55.9-47zM512 176a48 48 0 1 0 -96 0 48 48 0 1 0 96 0zM320 256a64 64 0 1 0 0-128 64 64 0 1 0 0 128z"/> *@
+        @* </svg> *@
+        @* <span class="fa-solid fa-users-rectangle fa-2xl"></span> *@
+        @* <span class="material-symbols-outlined">admin_panel_settings</span> *@
+        Students
     </a>
 
     <ul class="dropdown-menu">
         <li>
             <a class="dropdown-item @(currentController == "Students" ? "active" : "")"
                asp-area="" asp-controller="Students" asp-action="Index">
-                <i class="fas fa-person-shelter"></i> Students
+                <span class="fas fa-person-shelter"></span> Students
             </a>
         </li>
 
@@ -28,7 +40,7 @@
         <li>
             <a class="dropdown-item @(currentController == "StudentCourses" ? "active" : "")"
                asp-area="" asp-controller="StudentCourses" asp-action="Index">
-                <i class="fas fa-person-shelter"></i> StudentCourses
+                <span class="fas fa-person-shelter"></span> StudentCourses
             </a>
         </li>
 
